# culvert

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  Makefile  Makefile.am  README.md  ahb.c  ahb.h  ast.c  ast.h  clk.c  config.h  configure.ac  debug.c  debug.h  devmem.c  doit.c  flash.c  ilpc.c  ilpc.h  l2a.c  l2a.h  log.c  log.h  lpc.c  lpc.h  meson.build  otp.c  otp.h  p2a.c  p2a.h  pci.c  pci.h  priv.h  prompt.c  prompt.h  rev.c  rev.h  sfc.c  (+13 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: dco.yml  github-actions.yml
arch/: powerpc64le
arch/x86_64/: lpc.c
arch/x86_64-linux-gnu/: lpc.c
cmd/: console.c  debug.c  devmem.c  probe.c  read.c  replace.c  sfc.c  write.c
docs/: OpenOCD.md
meson/: aarch64-linux-gnu-gcc.ini  arm-buildroot-linux-gnueabi-gcc.ini  arm-linux-gnueabi-gcc.ini  arm-linux-gnueabihf-gcc.ini
openocd/scripts/: ast2500.cfg  ast2600-a7.cfg  ast2600-cm3.cfg
src/: ahb.c  ahb.h  array.h  ast.c  ast.h  bits.h  bridge.h  clk.c  clk.h  cmd.h  compiler.h  config.h.in  connection.c  connection.h  console.h  culvert.c  debug.c  debug.h  devmem.c  devmem.h  doit.c  flash.c  flash.h  host.c  host.h  ilpc.c  ilpc.h  l2a.c  l2a.h  log.c  log.h  lpc.h  mb.h  meson.build  mmio.c  mmio.h  otp.c  otp.h  p2a.c  p2a.h  (+25 more)
src/arch/ppc64/: lpc.c
src/arch/x86_64/: lpc.c
src/bridge/: debug.c  debug.h  devmem.c  devmem.h  ilpc.c  ilpc.h  l2a.c  l2a.h  meson.build  p2a.c  p2a.h
src/ccan/: meson.build
src/ccan/autodata/: autodata.h
src/ccan/list/: list.h
src/cmd/: arg_helper.c  arg_helper.h  console.c  coprocessor.c  debug.c  devmem.c  ilpc.c  jtag.c  meson.build  otp.c  p2a.c  probe.c  read.c  replace.c  reset.c  sfc.c  trace.c  write.c
src/devicetree/: g4.dts  g4.h  g5.dts  g5.h  g6.dts  g6.h  meson.build
src/soc/: bridge-ids.h  bridgectl.c  bridgectl.h  bridges.c  bridges.h  clk.c  debugctl.c  debugctl.h  ilpcctl.c  ilpcctl.h  jtag.c  jtag.h  meson.build  otp.c  otp.h  pciectl.c  pciectl.h  scu.c  scu.h  sdmc.c  sdmc.h  sfc.c  sfc.h  sioctl.c  sioctl.h  strap.c  strap.h  trace.c  wdt.c  wdt.h
src/soc/uart/: mux.c  mux.h  vuart.c
src/uart/: mux.c  mux.h  suart.c  suart.h  vuart.c  vuart.h
subprojects/: dtc.wrap
uart/: mux.h  suart.c  suart.h  vuart.c  vuart.h
