libccan = static_library('ccan',
                         implicit_include_directories: false,
                         include_directories: incdirs,
			 install: false,
                         sources: [
                                 'autodata/autodata.c',
                                 'noerr/noerr.c',
                                 'ptr_valid/ptr_valid.c',
                         ])
